--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <title>Junior PhoneGap Example</title>
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-	<script src="lib/javascripts/modernizr.custom.15848.js"></script>
-	<script src="lib/javascripts/zepto.min.js"></script>
-	<script src="lib/javascripts/zepto.flickable.min.js"></script>
-	<script src="lib/javascripts/lodash.min.js"></script>
-	<script src="lib/javascripts/backbone-min.js"></script>
-	<script src="src/javascripts/junior.js"></script>
-	<script src="main.js"></script>
-
-	<link rel="stylesheet" href="lib/stylesheets/ratchet.css"/>
-	<link rel="stylesheet" href="src/stylesheets/junior.css"/>
+	<link rel="stylesheet" href="stylesheets/vendor/ratchet.css"/>
+	<link rel="stylesheet" href="stylesheets/vendor/junior.css"/>
 </head>
 <body>
-<div id="app-container">
-    <div id="app-main">
-    <div>
-<div>
+    <div id="app-container">
+        <div id="app-main">
+        </div>
+    </div>
+
+    <script src="javascripts/vendor/modernizr.custom.15848.js"></script>
+    <script src="javascripts/vendor/zepto.min.js"></script>
+    <script src="javascripts/vendor/zepto.flickable.min.js"></script>
+    <script src="javascripts/vendor/lodash.min.js"></script>
+    <script src="javascripts/vendor/backbone-min.js"></script>
+    <script src="javascripts/vendor/junior.js"></script>
+    <script src="javascripts/app.js"></script>
 </body>
 </html>
